<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/register_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3000"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/MyToolbarTransparent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_register_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#3FFF"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <com.fgr.aabao.widget.ClearEditText
                android:id="@+id/et_register_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/rule"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="4dp"
                android:hint="@string/string_mail"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3FFF"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <com.fgr.aabao.widget.ClearEditText
                android:id="@+id/et_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/rule"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="4dp"
                android:hint="@string/string_register_name"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3FFF"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <com.fgr.aabao.widget.ClearEditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/rule"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="4dp"
                android:hint="@string/string_password"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>


        <com.fgr.aabao.widget.InverseColorButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="25dp"
            android:text="@string/string_register"
            android:textSize="20sp"
            app:inverseColor="#2097E1"
            app:whiteFillFirst="false"/>

        <TextView
            android:id="@+id/tv_treaty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/string_register_treaty"
            android:textColor="#AAFFFFFF"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_have"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/string_register_have"
            android:textColor="#EEFFFFFF"
            android:textSize="20sp"/>
    </LinearLayout>
</FrameLayout>