<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3000"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/MyToolbarTransparent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#3FFF"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <com.fgr.aabao.widget.ClearEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/rule"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="4dp"
                android:hint="@string/string_login_username"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3FFF"
            android:digits="@string/rule"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <com.fgr.aabao.widget.ClearEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="4dp"
                android:hint="@string/string_password"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3FFF"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <CheckBox
                android:id="@+id/remember_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_remember"
                android:textSize="18sp"/>
        </LinearLayout>

        <com.fgr.aabao.widget.InverseColorButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:text="@string/string_login"
            android:textSize="20sp"
            app:inverseColor="#2097E1"
            app:whiteFillFirst="false"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_login_forget"
                android:textColor="#DDFFFFFF"/>

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/string_login_register"
                android:textColor="#DDFFFFFF"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/string_login_other"
            android:textColor="#FFFF"
            android:textSize="18sp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@mipmap/login_wechat_background"
                android:padding="10dp"
                android:src="@mipmap/login_wechat_icon"/>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/login_sina_background"
                android:padding="10dp"
                android:src="@mipmap/login_sina_icon"/>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@mipmap/login_qq_background"
                android:padding="10dp"
                android:src="@mipmap/login_qq_icon"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>