<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#F5F5F5"
    app:cardCornerRadius="4dp">


    <ImageView
        android:id="@+id/iv_work"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_work_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:textColor="#333333"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_item_work_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:maxLines="5"
            android:textColor="#757575"
            android:textSize="12sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="#BFBFBF"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <com.fgr.aabao.widget.InverseColorButton
                android:id="@+id/btn_item_work_alter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/string_alter"
                app:inverseColor="#FFCC00"
                app:whiteFillFirst="false"/>

            <com.fgr.aabao.widget.InverseColorButton
                android:id="@+id/btn_item_work_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/string_delete"
                app:inverseColor="#CC0033"
                app:whiteFillFirst="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.fgr.aabao.widget.InverseColorButton
                android:id="@+id/btn_item_work_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/string_work_add"
                app:inverseColor="#33CC33"
                app:whiteFillFirst="false"/>

            <com.fgr.aabao.widget.InverseColorButton
                android:id="@+id/btn_item_work_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/string_history"
                app:inverseColor="#FF6600"
                app:whiteFillFirst="false"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>